@@ -1,7 +1,8 @@
 siril 0.9.7
 --/--/--
 
-* Fixing French translation
+* Fixed French translation
+* Fixed bug in registration from compositing for layers alignment
 
 siril 0.9.6
 06/20/17
